[package]
name = "cfautors"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", default-features = false, features = [
    "std",
    "derive",
    "help",
    "color",
    "usage",
    "error-context",
] }
humantime = "2.1.0"
reqwest = { version = "0.12.7", default-features = false, features = [
    "blocking",
    "default-tls",
    "json",
] }
serde = { version = "1.0.209", default-features = false }
serde_derive = { version = "1.0.209", default-features = false }

[profile.release]
lto = true
codegen-units = 1
